# telespial-EdgeAI_Smart_Pong_Demo_STMicro_STM32H7S78-DK

./: .gitignore  LICENSE  README.md  start_here.md
docs/: BUILD_FLASH_STM32H7S78DK.md  COMMAND_LOG.md  DECISIONS.md  HARDWARE_DOCS_INDEX.md  HARDWARE_SETUP.md  OPS_RUNBOOK.md  PORTING_PLAN.md  PROJECT_STATUS.md  RESTORE_POINTS.md  RISK_REGISTER.md  START_HERE.md  TODO.md
failsafe/: README_GOLDEN.txt  SHA256SUMS.txt  edgeai_smart_pong_stm32_failsafe_active.elf  edgeai_smart_pong_stm32_golden_20260323T002430Z.elf  edgeai_smart_pong_stm32_golden_20260323T004007Z.elf  edgeai_smart_pong_stm32_golden_20260323T135322Z.elf  edgeai_smart_pong_stm32_golden_20260323T142009Z.elf  edgeai_smart_pong_stm32_golden_20260323T180311Z.elf  edgeai_smart_pong_stm32_golden_20260323T180746Z.elf  edgeai_smart_pong_stm32_golden_20260324T164436Z.elf
stm32_port/: CMakeLists.txt  README.md
stm32_port/cmake/: toolchain-arm-none-eabi-gcc.cmake
stm32_port/src/: edgeai_config.h  edgeai_util.h  flash_first.sh  fsl_flash.h  main.c  par_lcd_s035.c  par_lcd_s035.h  startup_stm32h7s78xx.s  stm32_platform_bsp.c  sw_render.c  sw_render.h  system_stm32h7s78xx.c  text5x7.c  text5x7.h
stm32_port/src/game/: ai.c  ai.h  game.c  game.h  input.c  input.h  modes.c  modes.h  physics.c  physics.h  render.c  render.h  ui_layout.h
stm32_port/src/platform/: audio_hal.c  audio_hal.h  display_hal.c  display_hal.h  input_hal.c  input_hal.h  npu_hal.h  npu_hal_stub.c  time_hal.c  time_hal.h  touch_hal.c  touch_hal.h
tools/: README.md  build_arm.sh  flash_first.sh  flash_restore_active.sh  flash_restore_golden.sh
